--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17,6 +17,7 @@
 #mod-signIn{
   margin-top: 0;
   height: 100%;
+  min-width: 0;
 }
 .disable-buttons .btn{
   opacity: .3;
@@ -45,9 +46,13 @@
   font-weight: 600;
   margin-left: 10px;
   color: #505554;
+  opacity: .9;
+}
+.nav-a a:hover{
+  opacity: 1;
 }
 .nav-a a i{
-  margin: 0 3px 0 -2px;
+  margin: 0 1px 0 -2px;
   height: 17px;
   vertical-align: middle;
 }
@@ -56,6 +61,7 @@
   color: #FFF;
   padding: 0 3px;
   border-radius: 3px;
+  opacity: 1;
 }
 .nav .avatar{
   width: 32px;
@@ -70,7 +76,7 @@
 }
 .nav .logo{
   float: left;
-  font-size: 17px;
+  font-size: 0px;
   font-weight: 600;
   color: #445069;
   margin-right: 10px;
@@ -80,9 +86,9 @@
 .nav .logo > img{
   vertical-align: middle;
   position: relative;
-  top: -2px;
+  top: -3px;
   margin-right: 6px;
-  height: 28px;
+  height: 22px;
 }
 .container{
   width: 900px;
@@ -106,7 +112,6 @@ textarea{
   position: absolute;
   width: 100%;
   height: 100%;
-  min-width: 1020px;
 }
 #signIn-cover{
   min-height: 100%;
@@ -122,17 +127,22 @@ textarea{
   opacity: .85;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, .8);
   top: 50%;
-  margin-top: -200px;
+  margin-top: -230px;
+  width: 370px;
 }
 #mod-signIn .brand{
   line-height: 66px;
+  text-align: center;
+  margin-left: -20px;
 }
 #mod-signIn .login-box{
-  margin-top: 40px;
+  margin: 25px auto;
+  width: 300px;
 }
 #mod-signIn .brand > img{
-  margin-right: 10px;
+  margin: 7px 10px 0 0;
   vertical-align: top;
+  height: 50px;
   -webkit-filter: drop-shadow(1px 2px 2px rgba(0, 0, 0, .4));
 }
 #mod-signIn .container .desc{
@@ -148,13 +158,36 @@ textarea{
   font-weight: normal;
 }
 #mod-signIn input{
-  border: 2px solid black;
+  border: 0;
+  padding: 0;
+  display: block;
+  margin: 0;
+  border-radius: 0;
+  background-color: transparent;
+}
+#mod-signIn .input-line-wrap{
+  border-bottom: 1px solid #B9B9B9;
+  padding: 8px 5px;
+}
+#mod-signIn .description{
+  font-size: 22px;
+  font-weight: 300;
+}
+
+#mod-signIn .input-wrap{
+  overflow: hidden;
+  border-radius: 6px;
+  background-color: #FFF;
+  margin-bottom: 10px;
+  border: 2px solid #000;
 }
 #login-btn{
   background-color: #242424;
   margin-right: 10px;
   border-bottom: 3px solid #000;
   padding: 6px 13px;
+  margin-top: 10px;
+  border-radius: 2px;
 }
 #mod-signIn .login-box .desc{
   margin-left: 3px;
@@ -742,7 +775,12 @@ background-image: url(../img/test.png);
 }
 .mod-nav .buttons{
   float: right;
-  margin-right: 10px;
+  margin-right: -30px;
+}
+.mod-nav .left-indent{
+  width: 840px;
+  position: relative;
+  left: -20px;
 }
 #mod-explore .mod-nav .buttons{
   margin-right: 0;
@@ -1100,8 +1138,33 @@ textarea{
 .date-picker .cal-title .cal-btn{
   padding: 10px;
   cursor: pointer;
+  line-height: 0;
+}
+.date-picker .cal-title .cal-close:hover {
+  background-color: #E6BA91;
+}
+.date-picker .cal-title .cal-close {
+  position: absolute;
+  right: 0;
 }
 
+.clear-plexi{
+  position: relative;
+  z-index: 1005;
+}
 .btn.btn-success:active {
   background-color: #CE655E;
+}
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: inset 1px 1px 0 rgba(0, 0, 0, 0.1),inset 0 -1px 0 rgba(0, 0, 0, 0.07);
+}
+.custom-scrollbar::-webkit-scrollbar {
+  width: 12px;
+  height: 16px;
+}
+.custom-scrollbar::-webkit-scrollbar-button {
+  width: 0;
+  height: 0;
+  display: none;
 }
