--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19,6 +19,18 @@
   height: 100%;
   min-width: 0;
 }
+.top-highlight{
+  background-image: -webkit-radial-gradient(center, closest-side, rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0));
+  width: 800px;
+  height: 500px;
+  position: fixed;
+  z-index: 1;
+  left: 50%;
+  margin-left: -400px;
+  top: 50%;
+  opacity: 1;
+  margin-top: -300px;
+}
 .disable-buttons .btn{
   opacity: .3;
 }
@@ -124,8 +136,8 @@ textarea{
   color: white;
   font-weight: 600;
   font-size: 40px;
-  opacity: .85;
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, .8);
+  opacity: 1;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.7);
   top: 50%;
   margin-top: -230px;
   width: 370px;
@@ -134,6 +146,7 @@ textarea{
   line-height: 66px;
   text-align: center;
   margin-left: -20px;
+  opacity: .85;
 }
 #mod-signIn .login-box{
   margin: 25px auto;
@@ -166,8 +179,8 @@ textarea{
   background-color: transparent;
 }
 #mod-signIn .input-line-wrap{
-  border-bottom: 1px solid #B9B9B9;
   padding: 8px 5px;
+  border-bottom: 1px solid #B9B9B9;
 }
 #mod-signIn .description{
   font-size: 22px;
@@ -180,9 +193,10 @@ textarea{
   background-color: #FFF;
   margin-bottom: 10px;
   border: 2px solid #000;
+  opacity: .85;
 }
 #login-btn{
-  background-color: #242424;
+  background-color: #3C3C3C;
   margin-right: 10px;
   border-bottom: 3px solid #000;
   padding: 6px 13px;
@@ -201,7 +215,7 @@ textarea{
   background-color: rgba(0, 0, 0, 0.8);
 }
 .login-box a{
-  color: #D6D6D6;
+  color: #E0E0E0;
 }
 .login-box a:hover{
   color: #1ABC9C;
@@ -845,6 +859,12 @@ background-image: url(../img/test.png);
 .img-inner-wrap{
   height: 100%;
   overflow: hidden;
+}
+.img-inner-wrap > div {
+  background-size: 100% auto;
+  background-position: 50%;
+  width: 100%;
+  height: 100%;
 }
 .control-box-btns{
   position: absolute;
