--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9,6 +9,7 @@
   width: 100%;
   min-width: 900px;
   -webkit-transition: all .3s;
+  padding-bottom: 10px;
 }
 .mod .wrap{
   width: 1020px;
@@ -42,7 +43,7 @@
   padding-left: 10px;
   height: 40px;
   /* box-shadow: 0 1px 4px rgba(0, 0, 0, .15); */
-  background-color: #EEE;
+  background-color: #E9E9D6;
   /* opacity: .5; */
 }
 .nav-buttons div > div{
@@ -129,6 +130,7 @@ textarea{
   min-height: 100%;
   min-width: 100%;
   max-width: none;
+  background-size: cover;
 }
 #mod-signIn .container{
   z-index: 1;
@@ -177,6 +179,7 @@ textarea{
   margin: 0;
   border-radius: 0;
   background-color: transparent;
+  box-shadow: none;
 }
 #mod-signIn .input-line-wrap{
   padding: 8px 5px;
@@ -194,6 +197,7 @@ textarea{
   margin-bottom: 10px;
   border: 2px solid #000;
   opacity: .85;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, .3);
 }
 #login-btn{
   background-color: #3C3C3C;
@@ -202,6 +206,7 @@ textarea{
   padding: 6px 13px;
   margin-top: 10px;
   border-radius: 2px;
+  box-shadow: inset 0 1px rgba(255,255,255,.6);
 }
 #mod-signIn .login-box .desc{
   margin-left: 3px;
@@ -216,6 +221,8 @@ textarea{
 }
 .login-box a{
   color: #E0E0E0;
+  position: relative;
+  top: 32px;
 }
 .login-box a:hover{
   color: #1ABC9C;
@@ -860,11 +867,12 @@ background-image: url(../img/test.png);
   height: 100%;
   overflow: hidden;
 }
-.img-inner-wrap > div {
+.img-inner-wrap > a {
   background-size: 100% auto;
   background-position: 50%;
   width: 100%;
   height: 100%;
+  display: block;
 }
 .control-box-btns{
   position: absolute;
@@ -1177,7 +1185,7 @@ textarea{
 }
 .custom-scrollbar::-webkit-scrollbar-thumb {
   background-color: rgba(0, 0, 0, 0.2);
-  -webkit-box-shadow: inset 1px 1px 0 rgba(0, 0, 0, 0.1),inset 0 -1px 0 rgba(0, 0, 0, 0.07);
+  box-shadow: inset 1px 1px 0 rgba(0, 0, 0, 0.1),inset 0 -1px 0 rgba(0, 0, 0, 0.07);
 }
 .custom-scrollbar::-webkit-scrollbar {
   width: 12px;
