--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19,6 +19,7 @@
   margin-top: 0;
   height: 100%;
   min-width: 0;
+  padding-bottom: 0;
 }
 .top-highlight{
   background-image: -webkit-radial-gradient(center, closest-side, rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0));
@@ -219,6 +220,7 @@ textarea{
   margin-top: 10px;
   border-radius: 2px;
   box-shadow: inset 0 1px rgba(255,255,255,.6);
+  line-height: 21px;
 }
 #mod-signIn .login-box .desc{
   margin-left: 3px;
@@ -408,7 +410,7 @@ background-image: url(../img/test.png);
   background-size: 20px auto;
   width: 25px;
   height: 25px;
-
+  margin-right: 0;
 }
 #mod-detail .float-wrap div{
   float: left;
@@ -422,6 +424,9 @@ background-image: url(../img/test.png);
 }
 #mod-detail .float-wrap .buttons > div{
   cursor: pointer;
+}
+#mod-detail .float-wrap .buttons .mode {
+  margin-right: 0;
 }
 #mod-detail .summary::before{
   content: '';
@@ -472,6 +477,10 @@ background-image: url(../img/test.png);
   margin-right: 5px;
   font-size: 14px;
   line-height: 20px;
+}
+.picture-quality {
+  float: right;
+  margin-bottom: -8px;
 }
 .upload-pictures{
   padding: 10px;
@@ -589,6 +598,7 @@ background-image: url(../img/test.png);
 #mod-upload .it-post{
   width: 880px;
   padding: 10px;
+  border-radius: 0 0 6px 4px;
 }
 #mod-upload .it-post-date,
 #mod-upload .it-post-title{
@@ -615,6 +625,7 @@ background-image: url(../img/test.png);
   /* padding: 10px; */
   /* border-bottom: 1px solid #DDD; */
   /* overflow: hidden; */
+  border-radius: 0 0 4px 4px;
 }
 .it-pic-container img{
   visibility: hidden;
@@ -635,6 +646,18 @@ background-image: url(../img/test.png);
   100%{
     -webkit-transform: translate3d(0px, 0, 0px);
     opacity: 1;
+  }
+}
+
+@-webkit-keyframes loading {
+  0% {
+    -webkit-transform: translate3d(0, 0, 0);
+  }
+  40% {
+    -webkit-transform: translate3d(0, -10px, 0);
+  }
+  100% {
+    -webkit-transform: translate3d(0, 0, 0);
   }
 }
 
@@ -1264,4 +1287,40 @@ textarea {
   width: 0;
   height: 0;
   display: none;
+}
+
+.custom-select {
+  display: inline-block;
+  width: 80px;
+  background-color: #80C072;
+  color: #FFF;
+  border-bottom: 3px solid #70B362;
+  position: relative;
+  padding: 2px 4px;
+  border-radius: 2px;
+}
+.custom-select:hover ul {
+  display: block;
+}
+.custom-select ul {
+  position: absolute;
+  z-index: 1000;
+  background-color: #80C072;
+  margin-top: 5px;
+  margin-left: -4px;
+  display: none;
+  width: 100%;
+  box-shadow: 3px 3px 0 #73B467;
+}
+.custom-select ul li {
+  padding: 2px 4px;
+  border-bottom: 1px solid #72B366;
+  cursor: pointer;
+}
+.custom-select ul li:hover {
+  background-color: #8BCF7E;
+}
+
+.div-span {
+  display: inline;
 }
