--- a/public/css/app.css
+++ b/public/css/app.css
@@ -777,8 +777,9 @@ background-image: url(../img/test.png);
   width: 1000px;
   height: 100%;
   background-image: url(../img/samples/9.jpg);
-  background-size: 1000px auto;
+  background-size: cover;
   background-position: 50%;
+  background-repeat: no-repeat;
 }
 .mark-cover-2 .cover{
   position: relative;
@@ -957,6 +958,7 @@ background-image: url(../img/test.png);
   overflow: hidden;
 }
 .img-inner-wrap > a {
+  background-repeat: no-repeat;
   background-size: cover;
   background-position: 50%;
   width: 100%;
