--- a/public/css/app.css
+++ b/public/css/app.css
@@ -299,6 +299,12 @@ textarea{
 #mod-detail .top-wrapper{
   /* margin-left: 10px; */
 }
+#mod-detail .detail-comment {
+  border-left: 1px solid #D8D8D8;
+  border-right: 1PX SOLID #D8D8D8;
+  padding: 10px;
+  border-top: 1px solid #DDD;
+}
 
 #mod-detail .container .wrap-padding {
 border: 0px solid #D5D5D5;
