--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1414,7 +1414,53 @@ textarea {
 .custom-select ul li:hover {
   background-color: #8BCF7E;
 }
+.custom-alert {
+  display: none;
+  position: fixed;
+  left: 50%;
+  margin-left: -200px;
+  width: 380px;
+  background-color: #F3F0E5;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, .25);
+  border-radius: 0 0 4px 4px;
+  /* border: 2px solid #B8B8B8; */
+  border-top: 0;
+  -webkit-transition: top .3s;
+}
+.custom-alert-buttons button:first-child {
+  margin-right: 5px;
+}
+.custom-alert-title {
+  padding: 3px 7px;
+  background-color: #D6D3BA;
+  color: #FFF;
+  border-bottom: 2px solid #CFCDC8;
+  font-weight: bold;
+}
+.custom-alert-buttons {
+  float: right;
+  padding: 10px;
+}
+.custom-alert-filter {
+  background-color: rgba(255, 255, 255, .5);
+}
+.custom-alert-messageBody {
+  /* margin: 10px 0; */
+  padding: 10px;
+}
+.custom-alert .btn {
+  line-height: 28px;
+}
 
 .div-span {
   display: inline;
+}
+
+.notice {
+  position: fixed;
+  top: 50px;
+  z-index: 100;
+  color: #FFF;
+  background-color: #F5C9B1;
+  border: 2px solid #EEBCA1;
 }
