--- a/public/css/app.css
+++ b/public/css/app.css
@@ -102,7 +102,7 @@
 .nav .logo-v2 {
   background-color: #C7C7C7;
   margin-left: -10px;
-  padding: 0 10px;
+  padding: 0 5px;
   font-size: 12px;
 }
 .nav .logo > img{
@@ -110,7 +110,8 @@
   position: relative;
   top: -3px;
   margin-right: 6px;
-  height: 22px;
+  height: 25px;
+  -webkit-filter: drop-shadow(0 1px 1px rgba(0, 0, 0, .1));
 }
 .nav .logo-v2 > img {
   margin-right: 0;
@@ -168,9 +169,9 @@ textarea{
   width: 300px;
 }
 #mod-signIn .brand > img{
-  margin: 7px 10px 0 0;
+  margin: 15px 13px 0 2px;
   vertical-align: top;
-  height: 50px;
+  height: 35px;
   -webkit-filter: drop-shadow(1px 2px 2px rgba(0, 0, 0, .4));
 }
 #mod-signIn .container .desc{
@@ -257,6 +258,16 @@ textarea{
   text-indent: 0;
   width: 769px;
 }
+#mod-upload h3 {
+  position: relative;
+}
+#mod-upload h3 .switcher {
+  right: -4px;
+  top: 14px;
+  position: absolute;
+  font-size: 13px;
+  line-height: 1.2em;
+}
 #mod-upload strong{
   vertical-align: top;
 }
@@ -266,6 +277,10 @@ textarea{
   padding: 10px;
   cursor: text;
   -webkit-transition: background-color .3s;
+}
+#mod-upload .item textarea,
+#mod-upload .item input {
+  line-height: 17px;
 }
 #mod-upload .item:last-child{
   border-bottom: 0;
@@ -1128,6 +1143,7 @@ background-image: url(../img/test.png);
   max-width: 100px;
   display: inline-block;
   white-space: nowrap;
+  vertical-align: top;
 }
 .tag-name{
   font-weight: bold;
@@ -1476,3 +1492,74 @@ textarea {
 .pre-line {
   white-space: pre-line;
 }
+
+/* ---------- switcher ---------- */
+.switcher {
+  display: inline-block;
+  color: white;
+  background-color: #86C07B;
+  padding: 2px 4px;
+  border-radius: 7px;
+  cursor: pointer;
+}
+.switcher.inited {
+  -webkit-transition: all .3s;
+}
+.switcher:hover .thumb {
+  background-color: #C1F8C0;
+}
+.switcher-on,
+.switcher-off {
+  display: none;
+}
+.on .switcher-on{
+  display: inline-block;
+}
+.off .switcher-off {
+  display: inline-block;
+}
+.switcher .thumb {
+  position: absolute;
+  padding: 7px;
+  content: '';
+  border-radius: 7px;
+  background-color: #93EC90;
+  width: 4px;
+  -webkit-transition: all .3s;
+}
+.off.switcher .thumb {
+  background-color: #CEE7CD;
+}
+.off.switcher {
+  padding-left: 22px;
+  background-color: #B0CAAC;
+}
+.on.switcher {
+  padding-right:  22px;
+}
+/* ---------- switcher end ---------- */
+
+/* ---------- global-loading --------- */
+.global-loading {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 65535;
+  width: 100%;
+  height: 5px;
+  background-color: #BEB6A3;
+  background-size: 24px 24px;
+  background-image: linear-gradient(135deg, rgba(255, 255, 255, 0.25) 25%, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0) 50%, rgba(255, 255, 255, 0.25) 50%, rgba(255, 255, 255, 0.25) 75%, rgba(0, 0, 0, 0) 75%, rgba(0, 0, 0, 0));
+  -webkit-animation: global-loading 3s linear infinite;
+  -moz-animation: global-loading 3s linear infinite;
+  display: none;
+}
+@-webkit-keyframes global-loading {
+  0% {
+    background-position-x: 0;
+  }
+  100% {
+    background-position-x: 168px;
+  }
+}
+/* ---------- global-loading end --------- */
